[Fix] -> Ppopup spacing.

--- a/inc/customizer/custom-controls/divider/divider.css
+++ b/inc/customizer/custom-controls/divider/divider.css
@@ -16,6 +16,7 @@
   border-style: solid;
   border-color: #dddddd;
   line-height: 1;
+  margin-top: 12px;
 }
 
 .ast-field-settings-modal .customize-control-ast-divider .customize-control-title {
